<resources>
    <string name="app_name">SaveEnvironment</string>
    <string name="amount_saved_by_walking">Amount saved by walking</string>
    <string name="distance">Distance</string>
    <string name="insert_text">Insert Text</string>
    <string name="save">SAVE</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="placeholder_percentage">You have completed <b>45%</b> of your goal!</string>
    <string name="transportation_string">Transportation</string>
    <string name="electricity_string">Electricity</string>
    <string name="introduction_text">Find different ways to save money and save climate!</string>
    <string name="additional_values">Additional Ways</string>
    <string name="previous_bill_string">Previous Electricity Bill</string>
    <string name="placeholder_money">Rs 30000</string>
    <string name="notification_string">We will help you with managing your current electricity bill.
        <br>Turn on notifications from settings</br>
        <br>The difference will be added to your savings!</br></string>
    <string name="new_bill_string">Enter new Electricity Bill</string>
    <string name="new_electricity_bill">New Electricity Bill</string>
    <string name="save_new_bill">Save New Bill</string>
    <string name="set_goal_text">Enter below the amount you want to save this month :</string>
    <string name="setGoalButton">Set Goal</string>
    <string name="setGoalAmountHint">Amount</string>
    <string name="transport_button">Transport</string>
    <string name="electricity_button">Electricity</string>
    <string name="button4">Button4</string>
    <string name="button3">Button3</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Welcome!!</string>
    <string name="set_goal_string">Set Goal</string>
    <string name="profile">Profile</string>
    <string name="set_goal">Set Goal</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="saved">Saved</string>
    <string name="goal">Goal</string>
    <string name="you_have_completed_string">You have completed </string>
    <string name="percent_goal_string">% of your goal!</string>
    <string name="notification_turn_string">Turn on Notifications</string>
    <string-array name="vehicles">
        <item>Bike</item>
        <item>Car</item>
        <item>Walk</item>
    </string-array>
</resources>