<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SavingMethods">

    <Button
        android:id="@+id/transportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/transport_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/electricityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/electricity_button"
        app:layout_constraintEnd_toEndOf="@+id/transportButton"
        app:layout_constraintStart_toStartOf="@+id/transportButton"
        app:layout_constraintTop_toBottomOf="@+id/transportButton" />

    <Button
        android:id="@+id/plasticUsageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/button3"
        app:layout_constraintEnd_toEndOf="@+id/electricityButton"
        app:layout_constraintStart_toStartOf="@+id/electricityButton"
        app:layout_constraintTop_toBottomOf="@+id/electricityButton" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/button4"
        app:layout_constraintEnd_toEndOf="@+id/plasticUsageButton"
        app:layout_constraintStart_toStartOf="@+id/plasticUsageButton"
        app:layout_constraintTop_toBottomOf="@+id/plasticUsageButton" />
</androidx.constraintlayout.widget.ConstraintLayout>