<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetGoal">

    <TextView
        android:id="@+id/setGoalTextView"
        android:layout_width="270dp"
        android:layout_height="51dp"
        android:layout_marginTop="80dp"
        android:text="@string/set_goal_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/setGoalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:text="@string/setGoalButton"
        app:layout_constraintEnd_toEndOf="@+id/amountTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/amountTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/amountTextInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/amountTextInputLayout"
        android:layout_width="234dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/setGoalTextView"
        app:layout_constraintStart_toStartOf="@+id/setGoalTextView"
        app:layout_constraintTop_toBottomOf="@+id/setGoalTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/setGoalAmountHint"
            android:inputType="numberDecimal"
            android:textColorHint="#616161"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>